--- a/my-doctor-service/package.json
+++ b/my-doctor-service/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
+    "migrate": ". ./config/development.env; node_modules/.bin/sequelize db:migrate",
     "build": "nest build",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start": "nest start",
@@ -33,7 +34,8 @@
     "pino-http": "^8.3.3",
     "reflect-metadata": "^0.1.13",
     "rxjs": "^7.2.0",
-    "sequelize": "^6.29.0"
+    "sequelize": "^6.29.0",
+    "sequelize-cli": "^6.6.0"
   },
   "devDependencies": {
     "@nestjs/cli": "^9.0.0",
