refactor: remove nestjs framework

--- a/my-doctor-service/config/development.env
+++ b/my-doctor-service/config/development.env
@@ -1,6 +1,7 @@
 export APP_NAME="DoctorService"
 export NODE_ENV="development"
 export NO_COLOR=''
+export SERVER_PORT="3000"
 
 export DATABASE_HOST="localhost"
 export DATABASE_USERNAME="postgres"
