--- a/my-doctor-service/package.json
+++ b/my-doctor-service/package.json
@@ -8,7 +8,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "migrate": ". ./config/development.env; node_modules/.bin/sequelize db:migrate",
-    "start:dev": ". ./config/development.env; node index.js",
+    "start:dev": ". ./config/development.env; nodemon --watch . --exec \"node --inspect=0.0.0.0:9239 index.js\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
@@ -29,6 +29,7 @@
     "eslint": "^8.43.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "nodemon": "^2.0.22",
     "sequelize-cli": "^6.6.0"
   }
 }
