--- a/schedule-service/package.json
+++ b/schedule-service/package.json
@@ -2,15 +2,14 @@
   "name": "appointment-service",
   "version": "0.0.1",
   "description": "",
-  "type":"module",
+  "type": "module",
   "author": "",
   "private": true,
   "license": "UNLICENSED",
   "scripts": {
     "migrate": ". ./config/development.env; node_modules/.bin/sequelize db:migrate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
-    "start": ". ./config/development.env; node index.js",
-    "start:dev": ". ./config/development.env; node index.js",
+    "start:dev": ". ./config/development.env; nodemon --watch . --exec \"node --inspect=0.0.0.0:9239 index.js\"",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
   },
   "dependencies": {
@@ -25,6 +24,7 @@
     "eslint": "^8.43.0",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-plugin-import": "^2.27.5",
+    "nodemon": "^2.0.22",
     "sequelize-cli": "^6.6.0"
   }
 }
