--- a/schedule-service/package.json
+++ b/schedule-service/package.json
@@ -10,10 +10,11 @@
     "migrate": ". ./config/development.env; node_modules/.bin/sequelize db:migrate",
     "format": "prettier --write \"src/**/*.ts\" \"test/**/*.ts\"",
     "start:dev": ". ./config/development.env; nodemon --watch . --exec \"node --inspect=0.0.0.0:9239 index.js\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.js\" --fix"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.16",
+    "@grpc/proto-loader": "^0.7.7",
     "escriba": "^2.11.0",
     "log4js": "^6.9.1",
     "pg": "^8.10.0",
