--- a/my-doctor-service/package.json
+++ b/my-doctor-service/package.json
@@ -9,10 +9,11 @@
   "scripts": {
     "migrate": ". ./config/development.env; node_modules/.bin/sequelize db:migrate",
     "start:dev": ". ./config/development.env; nodemon --watch . --exec \"node --inspect=0.0.0.0:9239 index.js\"",
-    "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix"
+    "lint": "eslint \"{src,apps,libs,test}/**/*.js\" --fix"
   },
   "dependencies": {
     "@grpc/grpc-js": "^1.8.16",
+    "@grpc/proto-loader": "^0.7.7",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
     "escriba": "^2.11.0",
