--- a/api-gateway/config/development.env
+++ b/api-gateway/config/development.env
@@ -3,7 +3,13 @@ export NODE_ENV="development"
 export NO_COLOR=''
 export SERVER_PORT="3000"
 
-export DATABASE_HOST="localhost"
+export DATABASE_HOST="postgres"
 export DATABASE_USERNAME="postgres"
 export DATABASE_PASSWORD="postgres"
 export DATABASE_NAME="postgres"
+
+export APPOINTMENT_SERVICE_HOST="appointment-service"
+export APPOINTMENT_SERVICE_PORT="50051"
+
+export DOCTOR_SERVICE_HOST="doctor-service"
+export DOCTOR_SERVICE_PORT="50051"
