--- a/schedule-service/config/development.env
+++ b/schedule-service/config/development.env
@@ -2,7 +2,9 @@ export APP_NAME="AppointmentService"
 export NODE_ENV="development"
 export NO_COLOR=''
 
-export DATABASE_HOST="localhost"
+export DATABASE_HOST="postgres"
 export DATABASE_USERNAME="postgres"
 export DATABASE_PASSWORD="postgres"
 export DATABASE_NAME="postgres"
+
+export GRPC_SERVER_PORT="50051"
