--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
 
   doctor-service:
     build:
-      context: ./my-doctor-service
+      context: ./doctor-service
       dockerfile: Dockerfile
       args:
         NODE_ENV: development
@@ -34,7 +34,7 @@ services:
     working_dir: /code
     command: "npm run start:dev"
     volumes:
-      - ./my-doctor-service/:/code
+      - ./doctor-service/:/code
       - /code/node_modules
     ports:
       - "50052:50051"
@@ -47,7 +47,7 @@ services:
 
   appointment-service:
     build:
-      context: ./schedule-service
+      context: ./appointment-service
       dockerfile: Dockerfile
       args:
         NODE_ENV: development
@@ -56,7 +56,7 @@ services:
     working_dir: /code
     command: "npm run start:dev"
     volumes:
-      - ./schedule-service/:/code
+      - ./appointment-service/:/code
       - /code/node_modules
     ports:
       - "50051:50051"
