--- a/doctor-service/Makefile
+++ b/doctor-service/Makefile
@@ -14,6 +14,14 @@ migrate:
 setup-db: database migrate
 .PHONY: setup-db
 
+stop:
+	@docker-compose stop
+.PHONY: stop
+
+down:
+	@docker-compose down
+.PHONY: down
+
 purge-all:
 	@docker ps -aq | xargs docker stop
 	@docker ps -aq | xargs docker rm
