feat: add auth service

--- a/api-gateway/config/development.env
+++ b/api-gateway/config/development.env
@@ -13,3 +13,6 @@ export APPOINTMENT_SERVICE_PORT="50051"
 
 export DOCTOR_SERVICE_HOST="doctor-service"
 export DOCTOR_SERVICE_PORT="50051"
+
+export AUTH_SERVICE_HOST="auth-service"
+export AUTH_SERVICE_PORT="50051"
