refactor: decouple user and key services from auth service

--- a/api-gateway/config/development.env
+++ b/api-gateway/config/development.env
@@ -16,3 +16,6 @@ export DOCTOR_SERVICE_PORT="50051"
 
 export AUTH_SERVICE_HOST="auth-service"
 export AUTH_SERVICE_PORT="50051"
+
+export USER_SERVICE_HOST="user-service"
+export USER_SERVICE_PORT="50051"
