--- a/auth-service/config/development.env
+++ b/auth-service/config/development.env
@@ -18,3 +18,9 @@ export DYNAMO_MAX_RETRIES="20"
 export DYNAMO_CONNECT_TIMEOUT="1000"
 
 export SESSION_TIME="3600000"
+
+export USER_SERVICE_HOST="user-service"
+export USER_SERVICE_PORT="50051"
+
+export KEY_SERVICE_HOST="key-service"
+export KEY_SERVICE_PORT="50051"
