--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,12 +40,60 @@ services:
       - "50051"
     depends_on:
       - postgres
-      - dynamodb
+      - key-service
+      - user-service
     links:
       - postgres
+      - key-service
+      - user-service
+    networks: 
+      - health_network
+
+  user-service:
+    build:
+      context: ./user-service
+      dockerfile: Dockerfile
+      args:
+        NODE_ENV: development
+    container_name: user_service
+    hostname: localhost
+    working_dir: /code
+    command: "npm run start:dev"
+    volumes:
+      - ./user-service/:/code
+      - /code/node_modules
+    ports:
+      - "50051"
+    depends_on:
+      - postgres
+      - key-service
+    links:
+      - postgres
+      - key-service
+    networks: 
+      - health_network
+
+  key-service:
+    build:
+      context: ./key-service
+      dockerfile: Dockerfile
+      args:
+        NODE_ENV: development
+    container_name: key_service
+    hostname: localhost
+    working_dir: /code
+    command: "npm run start:dev"
+    volumes:
+      - ./key-service/:/code
+      - /code/node_modules
+    ports:
+      - "50051"
+    depends_on:
+      - dynamodb
+    links:
       - dynamodb
     networks: 
-      - health_network      
+      - health_network
 
   doctor-service:
     build:
