feat: validate session

--- a/auth-service/config/development.env
+++ b/auth-service/config/development.env
@@ -17,7 +17,7 @@ export DYNAMO_TIMEOUT="1000"
 export DYNAMO_MAX_RETRIES="20"
 export DYNAMO_CONNECT_TIMEOUT="1000"
 
-export SESSION_TIME="3600000"
+export SESSION_DURATION="3600000"
 
 export USER_SERVICE_HOST="user-service"
 export USER_SERVICE_PORT="50051"
