wip: available appointment times

--- a/appointment-service/config/development.env
+++ b/appointment-service/config/development.env
@@ -8,3 +8,6 @@ export DATABASE_PASSWORD="postgres"
 export DATABASE_NAME="postgres"
 
 export GRPC_SERVER_PORT="50051"
+
+export DOCTOR_SERVICE_HOST="doctor-service"
+export DOCTOR_SERVICE_PORT="50051"
